<resources>
    <string name="app_name">ZotFinder</string>
    <string name="action_settings">Settings</string>
    <string name="back_button">Back</string>
    <string name="map_header">Map</string>
    <string name="blue_phones">Blue Light Phones</string>
    <string name="evacuation_areas">Evacuation Areas</string>
    <string name="restrooms">Restrooms</string>
    <string name="search_header">Search</string>
    <string name="action_directions">Directions</string>
    <string name="person_info">Person Name</string>
    <string name="office_header">Office</string>
    <string name="phone_header">Office Phone Number</string>
    <string name="fax_header">Fax Number</string>
    <string name="email_header">Email</string>
    <string name="department_info">Department Name</string>
    <string name="service_info">Service Name</string>
    <string name="dept_address">Address</string>
    <string name="dept_number">Office Phone Number</string>
    <string name="dept_website">Website</string>
    <string name="building_info">Building Name</string>
    <string name="bldg_number">Building Number</string>
    <string name="bldg_address">Address</string>
    <string name="emergency_title">Emergency</string>
    <string name="dialer_title">Dialer</string>
    <string name="emergency_info_header">Emergency Information</string>
    <string name="top_emergencies">Top Emergencies</string>
    <string name="emergency_procedures">Emergency Procedures</string>
    <string name="roles_expectations">Roles / Expectations</string>
    <string name="emergency_info">Emergency Information</string>
    <string name="roles_and_expectations">Roles &amp; Expectations</string>
    <string name="student_button">Student</string>
    <string name="faculty_button">Faculty/Staff</string>
    <string name="student_expectations">Student Expectations</string>
    <string name="faculty_expectations">Faculty Expectations</string>
    <string name="other_emergencies">All Emergencies</string>
    <string name="active_shooter">Active Shooter</string>
    <string name="earthquake">Earthquake</string>
    <string name="violence">Violence</string>
    <string name="evacuation_disabilities">Evacuation Disabilities</string>
    <string name="suspicious_package">Suspicious Package</string>
    <string name="evacuation">Evacuation</string>
    <string name="hazardous_material">Hazardous Material</string>
    <string name="hazardous_material_shelter">Hazardous Material Shelter</string>
    <string name="bomb_threat">Bomb Threat</string>
    <string name="medical_emergency">Medical Emergency</string>
    <string name="emergency_preparedness">Emergency Preparedness</string>
    <string name="fire">Fire</string>
    <string name="persons_in_distress">Person In Distress</string>
    <string name="utility_failure">Utility Failure</string>
    <string name="secure_in_place">Secure-In-Place</string>
    <string name="active_shooter_title">Active Shooter</string>
    <string name="earthquake_title">Earthquake</string>
    <string name="violence_title">Violence</string>
    <string name="evacuation_disabilities_title">Evacuation Disabilities</string>
    <string name="suspicious_package_title">Suspicious Package</string>
    <string name="evacuation_title">Evacuation</string>
    <string name="hazardous_material_title">Hazardous Material</string>
    <string name="hazardous_material_shelter_title">Hazardous Material Shelter</string>
    <string name="bomb_threat_title">Bomb Threat</string>
    <string name="medical_emergency_title">Medical Emergency</string>
    <string name="emergency_preparedness_title">Emergency Preparedness</string>
    <string name="fire_title">Fire</string>
    <string name="persons_in_distress_title">Person In Distress</string>
    <string name="utility_failure_title">Utility Failure</string>
    <string name="secure_in_place_title">Secure-In-Place</string>
    <string name="community_service_officer">Community Service Officer (CSO)</string>
    <string name="counseling_center">Counseling Center</string>
    <string name="emergency_management">Emergency Management</string>
    <string name="environmental_health">Environmental Health &amp; Safety</string>
    <string name="facilities_management">Facilities Management Service Desk</string>
    <string name="oit">Office of Information Technology (OIT)</string>
    <string name="police_department_dispatch">Police Department Dispatch</string>
    <string name="student_health">Student Health</string>
    <string name="uci_emergency_info_line">UCI Emergency Info Line</string>
	<string name="call_911">911</string>
    <string name="input_text">UCINetID</string>
    <string name="input_hint">Enter a UciNetID</string>
    <string name="active_shooter_text">
<![CDATA[
			<ul>
			    <li><b>Call 911</b> if safe to do so.</li>
			    <br>
			    <li><b>Run</b> if you can get out, escape the area.</li>
			    <br>
			    <li><b>Hide</b> secure in place, lock/barricade doors, turn off lights, silence phones, and be quiet.</li>
			    <br>
			    <li><b>Fight</b> as a last resort, attack aggressively.</li>
			</ul>
			]]>
    </string>
    <string name="earthquake_text">
<![CDATA[
            <b>If you are inside:</b>
			<ul>
                <li>Drop-Cover-Hold under a table or desk or against an inside wall until the shaking stops.</li>
                <br>
                <li>Avoid windows, filing cabinets, bookcases and other heavy objects.</li>
                <br>
                <li>After the shaking stops, check for injuries and assess your surroundings for damage.</li>
                <br>
                <li>Evacuate the building if you feel unsafe or if told to do so by building staff or emergency
			    responders.</li>
                <br>
                <li>Do not leave the area/campus without reporting your status to someone in charge.</li>
                <br>
			</ul>
			<b>If you are outside:</b>
			<ul>
			    <li>Move away from trees, signs, buildings, electrical poles and wires.</li>
                <br>
                <li>Protect your head with your arms.</li>
                <br>
                <li>Proceed to the nearest assembly area.</li>
			</ul>
			]]>
    </string>
    <string name="persons_in_distress_text">
<![CDATA[
			<p><b>Persons Who Are Disruptive</b><br></p>
			<p>If a person displays conduct that is reckless, disorderly, threatening, 
			including self-harmful behavior, and you are concerned for your safety or the 
			safety of others, please call 911 or the UCI Police Department.<br></p>
			<p>If the conduct is not life threatening:<br></p>
			<ul>
			    <li>For a UCI student, contact the Office of Student Conduct.</li>
			    <br>
			    <li>For a UCI employee, contact Human Resources.</li>
			    <br>
			</ul>
			<p><b>Persons Who Are Distressed</b><br></p>
			<p>Distressed persons display persistent behaviors, such as: anxious, sad, irritable, 
			withdrawn, confused, lacks motivation and/or concentration, seeks constant attention, 
			demonstrates bizarre or erratic behavior, or expresses suicidal thoughts.<br></p>
			<ul>
                <li>For a UCI student, contact the Counseling Center, Student Health Center, Campus
                Assault Resources and Education (CARE), or the UCI Police Department for help.</li>
                <br>
                <li>For a UCI employee, contact Human Resources, Guidance Resources Employee Assistance Program,
                or the UCI Police Department for help.</li>
                <br>
			</ul>
			<p>For consultation regarding disruptive or distressed individuals, please contact the UCI 
			Consultation Team through the Office of the Clinical Social Worker.<br></p>
			]]>
    </string>
    <string name="fire_text">
<![CDATA[
		    <b>If you discover a fire:</b><br>
		    <ul>
                <li>Extinguish the fire if you have been trained and if it is safe to do so.</li>
                <br>
                <li>Evacuate the immediate area and close doors behind you.</li>
                <br>
                <li>Pull the nearest fire alarm.</li>
                <br>
                <li>Call 911 if safe to do so. Otherwise, evacuate the building then call 911.</li>
                <br>
                <li>Do not re-enter the building until an &#34;All Clear&#34; is given by emergency responders.</li>
                <br>
			</ul>
			<b>If you hear a fire alarm:</b><br>
			<ul>
                <li>Evacuate as soon as the alarm sounds.</li>
                <br>
                <li>Test closed doors with the back of your hand. DO NOT open doors if they are hot.</li>
                <br>
                <li>Use stairs only. Do not use elevators.</li
                <br>
                <li>Proceed to the designated assembly area.</li>
                <br>
                <li>Do not re-enter the building until an &#34;All Clear&#34; is given by emergency responders.</li>
                <br>
		    </ul>
			]]>
    </string>
    <string name="about_us_sponsors"><b>Sponsors:</b>\r\nAnne Widney\r\n<i>UCIPD Emergency Services Manager</i>\r\n\r\nGregory Gallardo\r\n<i>UCI Facilities Manager - Calit2</i>\r\n\r\nTony Soeller\r\n<i>Computer Support - UCI OIT</i></string>
    <string name="about_us_team_2x2"><b>Developers:</b> \r\nHoriya Ameen\r\nMichael Kunisaki\r\nSheena Perea\r\nDerick Tran\r\nSarah Tracy</string>
	<string name="about_us_questions"><b>For questions/comments, select below</b></string>
	<string name="about_us_general_inquiries">General Inquiries</string>
	<string name="about_us_bug_report">Bug Report</string>
    <string name="abbrBuilding">Building Abbreviation</string>
</resources>