<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout ="@layout/empty_toolbar"/>
	
    <ScrollView 
		    android:id="@+id/ScrollLayout"
		    android:layout_width="wrap_content"
	  		android:layout_height="match_parent">
			
			<RelativeLayout 
			    android:id="@+id/R3Layout"
			    android:layout_width="wrap_content"
	  			android:layout_height="wrap_content">
	  			
			    <!-- Department Address HEADER -->
			    <TextView
					android:id="@+id/deptAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/dept_address"
					android:textSize="@dimen/font_size"
                    android:paddingLeft="15dp"
					android:textColor="@color/white"
					android:background="@color/uci_blue"/>
			      <ImageButton 
		            android:id="@+id/locateButton"
		        	android:layout_width="wrap_content"
		        	android:layout_height="match_parent"
		        	android:layout_alignRight="@+id/deptAddress"
					android:layout_marginLeft="2dp"
					android:layout_marginBottom="3dp"
			        android:background="@android:color/transparent"
			        android:src="@drawable/ic_action_locate"
			        android:onClick="plotPoint"
                    />
	            <!-- Department Address FOR JAVA-->
	            
				<TextView
					android:id="@+id/departmentAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/deptAddress"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="15dp"
					android:clickable = "true"
					android:onClick="plotPoint"/>
			  
			
				<!-- Department Number HEADER -->
				
				<TextView
					android:id="@+id/deptPhoneNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/departmentAddress"
					android:text="@string/dept_number"
					android:textSize="@dimen/font_size"
                    android:paddingLeft="15dp"
					android:textColor="@color/white"
					android:background="@color/uci_blue"/>
				<!-- Department Number FOR JAVA-->
				<TextView
					android:id="@+id/departmentPhoneNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/deptPhoneNumber"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="15dp"
					android:clickable="true"
                    android:autoLink="phone"/>
				
				<!-- Department Website Header -->
				<TextView
					android:id="@+id/deptWebsite"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/departmentPhoneNumber"
					android:text="@string/dept_website"
					android:textSize="@dimen/font_size"
                    android:paddingLeft="15dp"
					android:textColor="@color/white"
					android:background="@color/uci_blue"/>
				
				<TextView
					android:id="@+id/departmentWebsite"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/deptWebsite"
                    android:padding="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:autoLink="web"/>
				
			</RelativeLayout>
	    
	</ScrollView>
	
    
</LinearLayout>