<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout ="@layout/empty_toolbar"/>
	
    <ScrollView 
		    android:id="@+id/ScrollLayout"
		    android:layout_width="fill_parent"
	  		android:layout_height="match_parent">
			
			<RelativeLayout 
			    android:id="@+id/R3Layout"
			    android:layout_width="wrap_content"
	  			android:layout_height="wrap_content">
	  			<ImageView 
	  			    android:id="@+id/building_image"
	  			    android:layout_width="fill_parent"
	  			    android:layout_height="match_parent"
	  			    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
	  			    android:layout_marginLeft="20dp"
	  			    android:layout_marginRight="20dp"
	  			    android:layout_marginBottom="5dp"
	  			    android:scaleType="fitXY"
	  			    android:adjustViewBounds="true"/>
	  			
			    <!-- Building Number HEADER -->
			    <TextView
					android:id="@+id/bldgAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/bldg_address"
					android:textSize="@dimen/font_size"
                    android:paddingLeft="15dp"
					android:textColor="@color/white"
					android:background="@color/uci_blue"
					android:layout_below="@+id/building_image" />
			    <ImageButton 
		            android:id="@+id/locateButton"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_alignRight="@+id/bldgAddress"
		        	android:layout_alignTop="@+id/bldgAddress"
			        android:background="@android:color/transparent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="3dp"
			        android:src="@drawable/ic_action_locate"
			        android:onClick="plotPoint"
	                />
	            <!-- Building Address FOR JAVA-->
				<TextView
					android:id="@+id/buildingAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/bldgAddress"
                    android:padding="15dp"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:clickable = "true"
					android:onClick="plotPoint"/>

				<!-- Building Number HEADER -->

				<TextView
					android:id="@+id/bldgNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/buildingAddress"
					android:text="@string/bldg_number"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/font_size"
					android:textColor="@color/white"
					android:background="@color/uci_blue"/>
				<!-- Building Number FOR JAVA-->
				<TextView
					android:id="@+id/buildingNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/bldgNumber"
                    android:padding="15dp"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:clickable="true"/>

                <TextView
                    android:id="@+id/abbrBuilding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buildingNumber"
                    android:text="@string/abbrBuilding"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/font_size"
                    android:textColor="@color/white"
                    android:background="@color/uci_blue"/>
                <TextView
                    android:id="@+id/buildingAbbr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/abbrBuilding"
                    android:padding="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:clickable="false"/>
			</RelativeLayout>
	</ScrollView>
</LinearLayout>