<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout ="@layout/empty_toolbar"/>

    <ScrollView 
		    android:id="@+id/ScrollLayout"
		    android:layout_width="wrap_content"
	  		android:layout_height="match_parent">
			
			<RelativeLayout 
			    android:id="@+id/R3Layout"
			    android:layout_width="wrap_content"
	  			android:layout_height="wrap_content">
	  			
			    <!-- Office Location -->
			    <TextView
					android:id="@+id/officeHeader"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/office_header"
					android:textSize="@dimen/font_size"
                    android:paddingLeft="15dp"
					android:textColor="@color/white"
					android:background="@color/uci_blue"/>
			    <ImageButton 
		            android:id="@+id/locateButton"
		        	android:layout_width="wrap_content"
		        	android:layout_height="match_parent"
		        	android:layout_alignRight="@+id/officeHeader"
					android:layout_marginLeft="2dp"
					android:layout_marginBottom="3dp"
			        android:background="@android:color/transparent"
			        android:src="@drawable/ic_action_locate"
			        android:clickable="true"
			        android:onClick="plotPoint"/>
	        
				<TextView
					android:id="@+id/officeLocation"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/officeHeader"
                    android:padding="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
					android:clickable="true"
					android:onClick="plotPoint"/>
				
				<!-- Phone Number -->
				
				<TextView
					android:id="@+id/phoneHeader"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/officeLocation"
					android:text="@string/phone_header"
					android:textSize="@dimen/font_size"
                    android:paddingLeft="15dp"
					android:textColor="@color/white"
					android:background="@color/uci_blue"/>
				
				 <ImageButton 
		            android:id="@+id/callButton"
		        	android:layout_width="wrap_content"
		        	android:layout_height="match_parent"
		        	android:layout_below="@+id/officeLocation"
		        	android:layout_alignRight="@+id/phoneHeader"
					android:layout_marginLeft="2dp"
					android:layout_marginBottom="3dp"
			        android:background="@android:color/transparent"
			        android:src="@drawable/ic_action_call"
			        android:clickable="true"
			        android:onClick="call"/>
				
				<TextView
					android:id="@+id/phoneNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/phoneHeader"
                    android:textAppearance="?android:attr/textAppearanceMedium"
					android:padding="15dp"
					android:clickable="true"
                    android:autoLink="phone"/>
				
				<!-- Email -->
				<TextView
					android:id="@+id/emailHeader"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/phoneNumber"
					android:text="@string/email_header"
					android:textSize="@dimen/font_size"
                    android:paddingLeft="15dp"
					android:textColor="@color/white"
					android:background="@color/uci_blue"/>
				
				 <ImageButton 
		            android:id="@+id/emailButton"
		        	android:layout_width="wrap_content"
		        	android:layout_height="match_parent"
		        	android:layout_below="@+id/phoneNumber"
		        	android:layout_alignRight="@+id/emailHeader"
					android:layout_marginLeft="2dp"
					android:layout_marginBottom="3dp"
			        android:background="@android:color/transparent"
			        android:src="@drawable/ic_action_email"
			        android:clickable="true"
			        android:onClick="sendEmail"/>
				
				<TextView
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/emailHeader"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="15dp"
					android:clickable="true"
                    android:autoLink="email"
					android:onClick="sendEmail"/>
			</RelativeLayout>
	</ScrollView>
</LinearLayout>